test_regress/t/t_interface_virtual_task_timing_unsup.out
%Error-UNSUPPORTED: t/t_interface_virtual_task_timing_unsup.v:12:5: Unsupported: Event control with implicit sensitivity (@*) in this context; use an explicit sensitivity list instead
                                                                  : ... note: In instance 't.c'
   12 |     @(*) seen_id = id;
      |     ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
